# cisco-cspc

./: .gitignore  NOTICE  README.md  cspc_api.py  pylintrc  pyproject.toml  requirements-dev.txt
examples/: add_devices_and_credentials.py  sync_from_ise.py
src/cspc_api/: __init__.py  cspc_api.py  cx_cloud_agent.py
src/cspc_api/xml_requests/: add_multiple_device_credentials.xml  add_multiple_devices.xml  discovery_by_ip.xml  discovery_by_range.xml  get_details_of_all_devices.xml  get_job_list_all.xml  get_job_status.xml
tests/: example.json  example.xml  test_cspc_api.py  test_to_dict.py
xml_requests/: add_multiple_device_credentials.xml  delete_multiple_devices.xml  get_all_device_groups.xml  get_job_list.xml  modify_multiple_devices.xml
